--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
 					</h4>
 					<h5>Full Stack Developer</h5>
 					<p class="time-periods">April 2021 - January 2022 | Ukraine</p>
+                    <ul class="my-work-experience-duties">
+							<li>Team lead of the Ice-Cream project.</li>
+							<li>Scrum master of the Filmoteka project.</li>							
+						</ul>
 				</div>
 			</div>
 
