--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								. . . . . . . . . . .
 								<span>
 									<span class="my-projects-bracket">[</span> HTML5, CSS3, a
-									simple landing of own design for a friend
+									simple landing page of own design for a friend
 
 									<span class="my-projects-bracket">]</span>
 								</span>
