target="_blank" added

--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 							<span class="my-projects-text">
 								<a
 									href="https://meelenych.github.io/15-final/"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>Ice-Cream</a
 								>
 								<a
 									href="https://github.com/Meelenych/15-final"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>GitHub Link</a
 								>
@@ -65,11 +69,15 @@
 							<span class="my-projects-text">
 								<a
 									href="https://telekaster.github.io/eighternity_filmoteka/"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>Filmoteka</a
 								>
 								<a
 									href="https://github.com/Telekaster/eighternity_filmoteka"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>GitHub Link</a
 								>
@@ -92,12 +100,16 @@
 							<span class="my-projects-text">
 								<a
 									href="https://meelenych.github.io/goit-markup-hw-08/index.html"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>WebStudio</a
 								>
 
 								<a
 									href="https://github.com/Meelenych/goit-markup-hw-08"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>GitHub Link</a
 								>
@@ -118,12 +130,16 @@
 							<span class="my-projects-text">
 								<a
 									href="https://meelenych.github.io/Automatch/index.html"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>Automatch</a
 								>
 
 								<a
 									href="https://github.com/Meelenych/Automatch"
+									target="_blank"
+									rel="noopener nofollower"
 									class="my-projects-link"
 									>GitHub Link</a
 								><br />
